Padding added to news container

--- a/docroot/themes/custom/site/templates/page/page--node.html.twig
+++ b/docroot/themes/custom/site/templates/page/page--node.html.twig
@@ -39,7 +39,7 @@
         </div>
         <div class="layout__header-row layout__header-row--bottom">
             <div class="nav-button">
-                <button id="toggle_mobile_menu" type="button" class="navbar-toggle collapsed pull-left" data-toggle="collapse" data-target="#navbar-collapse-menu" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar long"></span> <span class="icon-bar"></span> <span class="icon-bar long"></span> </button>
+                <button id="toggle-menu-left" type="button" class="navbar-toggle collapsed pull-left" data-toggle="collapse" data-target="#navbar-collapse-menu" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar long"></span> <span class="icon-bar"></span> <span class="icon-bar long"></span> </button>
             </div> {% if page.header_navigation %} {{ page.header_navigation }} {% endif %} </div>
     </header>
     <!-- End - header -->
