--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -524,6 +524,9 @@ flex-direction: column;
     
     display: none;
 }
+.view-class-packages-frontpage .view-header {
+    font-size: 24px!important;
+}
 
 .layout__news .node-page-title {
     
