--- a/docroot/themes/custom/site/templates/page/page--node--13.html.twig
+++ b/docroot/themes/custom/site/templates/page/page--node--13.html.twig
@@ -6,37 +6,11 @@
         <!-- End - title -->
     </div>
     <!-- End - drawer -->
+
     <!-- Begin - header -->
-    <header class="layout__header">
-        <!-- Begin - logo -->
-        <a class="layout__header-logo" href="{{ url('<front>') }}"></a>
-        <!-- End - logo -->
-        <div class="layout__header-row layout__header-row--top">
-            <!-- Begin - drawer button -->{#
-            <div aria-expanded="false" data-toggle-drawer role="button" tabindex="0" class="layout__drawer-button">#} {#<span class="icon"></span>#} {#</div>#}
-            <!-- End - drawer toggle -->
-            <!-- Begin - title -->{#<span class="layout-title">Title</span>#}
-            <!-- End - title -->
-            <!-- Begin - contact information -->
-            <aside class="layout-header-contact-information"> <a href="tel:004575820811"><i class="material-icons">phone</i> +45 7582 0811</a> <span>Mandag - fredag <strong>08:00 - 15:00</strong></span> </aside>
-            <!-- End - contact information -->
-            <!-- Begin - tour -->
-            <aside class="layout-header-tour"> <a href="#"><i class="material-icons">bookmark_border</i> Rundvisning</a> <span><strong>Det er gratis</strong></span> </aside>
-            <!-- End - tour -->
-            <!-- Begin - contact -->
-            <aside class="layout-header-contact"> <a href="#"><i class="material-icons">portrait</i> Kontakt</a> </aside>
-            <!-- End - contact -->
-            <!-- Begin - spacer -->
-            <!-- Add spacer, to align navigation to the right -->
-            <div class="layout-spacer"></div>
-            <!-- End - spacer -->
-            <!-- Begin - black bar - right -->{% if page.header_black_bar_right %} {% block header_black_bar_right %}
-            <aside class="layout-header-language-selection"> {{ page.header_black_bar_right }} </aside> {% endblock %} {% endif %}
-            <!-- End - black bar - right -->
-        </div>
-        <div class="layout__header-row layout__header-row--bottom"> {% if page.header_navigation %} {{ page.header_navigation }} {% endif %} </div>
-    </header>
+    {% include '@site/custom/header.html.twig' %}
     <!-- End - header -->
+
     <!-- Begin - document -->
     <main class="layout__document" role="document">
         <!-- Begin - content -->
