--- a/docroot/themes/custom/site/templates/taxonomy-term/teaser/taxonomy-term--vih-class-package--teaser.html.twig
+++ b/docroot/themes/custom/site/templates/taxonomy-term/teaser/taxonomy-term--vih-class-package--teaser.html.twig
@@ -26,7 +26,7 @@
  */
 #}
 
-<a href="{{ url }}" target="_blank">
+<a href="{{ url }}">
 <div class="views-field views-field-nothing">
   <span class="field-content">
     <div class="fagpakker-container">
