--- a/docroot/themes/custom/site/src/scss/custom/components/_page-elements.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-elements.scss
@@ -393,7 +393,7 @@ $font-family-primary: 'Lato', sans-serif;
 
 .modal-content {
     padding: 0;
-    height: 100%;
+    min-height: 100vh!important;
     border-radius: 0px !important;
     overflow: hidden;
     border: none;
@@ -408,7 +408,6 @@ $font-family-primary: 'Lato', sans-serif;
     height: 80% !important;
     border-radius: 0px !important;
     height: 100vh!important;
-    padding-top: 100px;
     padding-bottom: 100px;
 }
 
@@ -464,7 +463,7 @@ $font-family-primary: 'Lato', sans-serif;
 .modal-body {
     padding: 80px !important;
     padding-top: 0px !important;
-    height:300px;
+    height:100%!important;
     padding-right: 60px !important;
     margin-right: 20px;
     overflow-y : auto;
