--- a/docroot/themes/custom/site/src/scss/custom/components/_page-elements.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-elements.scss
@@ -423,7 +423,10 @@ $font-family-primary: 'Lato', sans-serif;
         font-weight: 600;
     }
 }
-
+.vih_class .col-xs-4 {
+        overflow: hidden;
+    padding-right: 25px;
+}
 .btn-more {
     background: none!important;
     width: 40px;
