--- a/docroot/themes/custom/site/src/scss/custom/components/_page-elements.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-elements.scss
@@ -409,6 +409,7 @@ $font-family-primary: 'Lato', sans-serif;
     border-radius: 0px !important;
     height: 100vh!important;
     padding-bottom: 100px;
+    padding-top: 100px;
 }
 
 .modal-header-title {
@@ -476,10 +477,8 @@ $font-family-primary: 'Lato', sans-serif;
     color: #000 !important;
     padding-bottom: 2px !important;
     background: #fff !important;
-    border-radius: 100px !important;
-    display: flex !important;
-    justify-content: center !important;
-    align-items: center !important;
+    padding: 2px;
+    border-radius: 100px;
     width: 40px;
     height: 40px;
     opacity: 1;
