--- a/docroot/themes/custom/site/src/scss/custom/components/_page-elements.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-elements.scss
@@ -410,6 +410,10 @@ $font-family-primary: 'Lato', sans-serif;
     height: 100vh!important;
     padding-bottom: 100px;
     padding-top: 100px;
+    overflow: hidden;
+    -webkit-box-shadow: 0px 0px 93px -20px rgba(0, 0, 0, 0.55);
+    box-shadow: 0px 0px 93px -20px rgba(0, 0, 0, 0.55);
+    padding-top: 0;
 }
 
 .modal-header-title {
@@ -471,6 +475,14 @@ $font-family-primary: 'Lato', sans-serif;
     padding-right: 60px !important;
     margin-right: 20px;
     overflow-y : auto;
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+    width: 100%;
+}
+
+.modal-body .panel-group {
+    width: 100%;
 }
 
 .modal-header .close {
