Mobile menu styled and logo added

--- a/docroot/themes/custom/site/src/scss/custom/components/_banner.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_banner.scss
@@ -59,6 +59,7 @@
       text-transform: uppercase;
       color: #fff;
       font-weight: 500;
+            line-height: 46px;
         font-family: 'Open Sans', sans-serif;
     }
 
