--- a/docroot/themes/custom/site/templates/menu/menu--main--site-main-menu-mobile.html.twig
+++ b/docroot/themes/custom/site/templates/menu/menu--main--site-main-menu-mobile.html.twig
@@ -15,6 +15,7 @@
           {# List #}
           {% if menu_level == 0 %}
 <ul {{ attributes.addClass('layout-navigation layout-navigation--full-width layout--large-screen-only') }} >
+   <div class="logo"><a href="{{ url('<front>') }}"><span>Vejle Idrætshøjskole</span></a></div>
     {% else %}
     <ul{{ attributes.addClass( 'layout-navigation__dropdown-menu') }}>
         {% endif %}
