Menu link change for desktop

--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -160,6 +160,9 @@ html {
         padding-top: $md-page-layout-content-inner-padding-top;
         padding-bottom: $md-page-layout-content-inner-padding-bottom;
     }
+    .layout-navigation__link {
+        height: 100%;
+    }
 }
 
 // Desktop - only
