correct links added to header

--- a/docroot/themes/custom/site/templates/custom/header.html.twig
+++ b/docroot/themes/custom/site/templates/custom/header.html.twig
@@ -33,13 +33,13 @@
 
         <!-- Begin - tour -->
         <aside class="layout-header-tour">
-            <a href="#"><i class="material-icons">bookmark_border</i> Rundvisning</a> <span><strong>Det er gratis</strong></span>
+            <a href="/rundvisning"><i class="material-icons">bookmark_border</i> Rundvisning</a> <span><strong>Det er gratis</strong></span>
         </aside>
         <!-- End - tour -->
 
         <!-- Begin - contact -->
         <aside class="layout-header-contact">
-            <a href="#"><i class="material-icons">portrait</i> Kontakt</a>
+            <a href="/kontakt"><i class="material-icons">portrait</i> Kontakt</a>
         </aside>
         <!-- End - contact -->
 
