--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -105,6 +105,9 @@ html {
     background-position: center;
 }
 
+.path-node .news-container {
+    padding-bottom: 100px;
+}
 // --------------------------------------------------
 // Variants
 // --------------------------------------------------
@@ -711,8 +714,9 @@ flex-direction: column;
 .layout__news .angled-background-color .angled-background-inner:before {
     height: 160px!important;
     z-index: 9999999;
-    top: -80px;
+    top: -100px;
     position: relative;
+    border-bottom: 10px solid white;
 }
 
 .layout__news .angled-background-color-white {
