--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -718,6 +718,9 @@ flex-direction: column;
     position: relative;
     border-bottom: 10px solid white;
 }
+.path-langeophold .layout__content .heading {
+    padding-bottom: 150px;
+}
 
 .layout__news .angled-background-color-white {
     height: 20px;
