--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -721,7 +721,7 @@ flex-direction: column;
     position: relative;
     border-bottom: 10px solid white;
 }
-.path-langeophold .layout__content .heading {
+.path-langeophold .news-container {
     padding-bottom: 150px!important;
 }
 
