--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -884,12 +884,13 @@ flex-direction: column;
 }
 .path-kortkurser .banner:after {
     background: white!important;
+    border-bottom: 170px solid white;
 }
 .path-kortkurser .angled-background-inner:before {
         display: none!important;
 }
 div[role=heading] {
-    margin-top: 60px;
+    margin-top: 150px;
 }
 @media screen and (max-width: 869px) {
     .layout-navigation--full-width {
