--- a/docroot/themes/custom/site/templates/page/page.html.twig
+++ b/docroot/themes/custom/site/templates/page/page.html.twig
@@ -1,5 +1,5 @@
 <!-- Begin - wrapper -->
-<div class="layout__wrapper layout--fixed-header">
+<div class="layout__wrapper layout--fixed-header" id="page-html">
     {{ drupal_block('popup_cta') }}
     <!-- Begin - drawer -->
     <div class="layout__drawer" aria-hidden="true">
