--- a/docroot/themes/custom/site/src/scss/custom/components/_header.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_header.scss
@@ -217,11 +217,12 @@
 
     .region {
 
-      &,
-      > nav {
-        display: block;
-        border: 0;
-      }
+//      &,
+//      > nav {
+//        display: block;
+//        border: 0;
+//      }
+
     }
   }
 
@@ -427,22 +428,24 @@
           width: auto;
         }
       }
-      .navbar-collapse {
+
+      .navmenu.navmenu-fixed-left {
         position: fixed;
+        left: 0;
         height: 100%;
-        width: 60%;
         background-color: #0080af;
         transform: translateX(0);
         padding:0;
         border: none;
         top: 0px;
         -webkit-box-shadow: inset -5px 0px 29px -9px rgba(0,0,0,0.5);
--moz-box-shadow: inset -5px 0px 29px -9px rgba(0,0,0,0.5);
-box-shadow: inset -5px 0px 29px -9px rgba(0,0,0,0.5);
-        }
-        #main-menu {
-            height: 70px!important;
-        }
+        -moz-box-shadow: inset -5px 0px 29px -9px rgba(0,0,0,0.5);
+        box-shadow: inset -5px 0px 29px -9px rgba(0,0,0,0.5);
+      }
+
+      #main-menu {
+        height: 70px!important;
+      }
       .layout-navigation {
         flex-direction: column;
         height: auto;
@@ -536,7 +539,7 @@ box-shadow: inset -5px 0px 29px -9px rgba(0,0,0,0.5);
   }
   .layout__document {
     &.mobile-menu-open {
-      transform: translateX(50%);
+      //transform: translateX(60%);
     }
   }
 }
