--- a/docroot/themes/custom/site/templates/custom/header.html.twig
+++ b/docroot/themes/custom/site/templates/custom/header.html.twig
@@ -62,12 +62,13 @@
 
     <div class="layout__header-row layout__header-row--bottom">
         <div class="nav-button">
-            <button id="toggle_mobile_menu" type="button" class="navbar-toggle collapsed pull-left" data-toggle="collapse" data-target="#navbar-collapse-menu" aria-expanded="false">
+            <button id="toggle_mobile_menu" type="button" class="navbar-toggle pull-left" data-toggle="offcanvas" data-target="#navbar-collapse-menu" data-canvas="body">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar long"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar long"></span>
             </button>
+
         </div>
         {% if page.header_navigation %}
             {{ page.header_navigation }}
