fixing mobile menu

--- a/docroot/themes/custom/site/src/scss/custom/components/_header.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_header.scss
@@ -433,6 +433,7 @@
         position: fixed;
         left: 0;
         height: 100%;
+        max-width: 230px;
         background-color: #0080af;
         transform: translateX(0);
         padding:0;
