--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -987,6 +987,12 @@ div[role=heading] {
 .layout__header .layout__header-row--bottom .layout-navigation > .layout-navigation__link.active > a {
     background-color: transparent!important;
 }
+.field--item:nth-child(5) .field--name-field-heading  {
+    margin-top: -50px;
+}
+ .field--type-string p {
+    color: #928f8f!important;
+}
 
 @media screen and (max-width: 869px) {
     .layout-navigation--full-width {
