Changes to long course twig file

--- a/docroot/themes/custom/site/templates/page/page--vih-long-cource.html.twig
+++ b/docroot/themes/custom/site/templates/page/page--vih-long-cource.html.twig
@@ -46,7 +46,7 @@
               {% if node.title.value %}
                 <h2 class="node-page-title">{{ node.title.value }}</h2>
               {% elseif page['#title'] %}
-                <h2>{{ page['#title'] }}</h2>
+                <h2>{{ node.field_course_heading.value }}</h2>
               {% endif %}
 
 
