--- a/docroot/themes/custom/site/templates/page/page--vih-long-cource.html.twig
+++ b/docroot/themes/custom/site/templates/page/page--vih-long-cource.html.twig
@@ -44,7 +44,7 @@
               {{ page.breadcrumb }}
               <hr>
               {% if node.title.value %}
-                <h2 class="node-page-title">{{ node.title.value }}</h2>
+                <h2 class="node-page-title">{{ node.field_course_heading.value }}</h2>
               {% elseif page['#title'] %}
                 <h2>{{ node.field_course_heading.value }}</h2>
               {% endif %}
