--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -281,6 +281,9 @@ h6 {
     border-bottom: none;
     padding: 10px;
 }
+.div.views-field.views-field-field-image {
+    overflow: hidden;
+}
 
 #view-title-table-column {
     border-bottom: none;
