--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -276,6 +276,9 @@ h6 {
     min-width: 100%;
     max-width: inherit;
 }
+.angled-background-color .container p {
+    color: #928f8f;
+}
 
 #view-field-vih-course-periods-table-column {
     border-bottom: none;
