--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -278,6 +278,8 @@ h6 {
 }
 .angled-background-color .container p {
     color: #928f8f;
+    text-transform: uppercase;
+    font-weight: 600;
 }
 
 #view-field-vih-course-periods-table-column {
