fixing menu behaviour iphones

--- a/docroot/themes/custom/site/src/scss/custom/components/_header.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_header.scss
@@ -397,7 +397,7 @@
     }
   .layout__header {
     &.mobile-menu-open {
-      transform: translateX(0%);
+      //transform: translateX(0%);
     }
      background-color: $brand-primary;
     .layout__header-row {
